<resources>
    <string name="app_name">lab5</string>
    <string name="text_input_hint">enter something</string>
    <string name="button_text">Set Text</string>
    <string name="button2_text">Show next page</string>
    <string name="second_activity_text">Hi, it is second activity</string>
    <string name="previous_text">Previous</string>
    <string name="next_text">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>