<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".oldActivities.SecondActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:background="#FF888888"
        android:onClick="showPreviousActivity"
        android:text="@string/previous_text"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="118dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="114dp"
        android:text="@string/second_activity_text"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="#FF888888"
        android:onClick="showNextActivity"
        android:text="@string/next_text"
        android:textColor="#FFFFFF"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="140dp">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:checked="true"
            android:onClick="setDefaultButtonsColor"
            android:text="Default" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="setGreenButtonsColor"
            android:text="Green" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="setBlueButtonsColor"
            android:text="Blue" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="218dp"
        android:text="Choose buttons color:"
        android:textSize="18sp" />

</RelativeLayout>